--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
         </ul>
       </div>
       <div id="Content">
-        <div id="Student_1">
+        <div class="student">
           <h1>Student Number 1</h1>
           <div id="Avatar"></div>
           <p>Ara</p>
