--- a/page3.html
+++ b/page3.html
@@ -18,10 +18,10 @@
         </ul>
       </div>
       <div id="Content">
-        <div id="Student_2">
+        <div class="student">
           <h1>Student Number 2</h1>
           <div id="Avatar2"></div>
-          <p>Emi</p>
+          <p>Emir</p>
         </div>
       </div>
     </div>
